# dac

./: AGENTS.md  README.md  TECHNICAL_DESIGN.md  pyproject.toml
src/sourcedac/: cli.py
src/sourcedac/core/: __init__.py  analysis.py  config.py  indexer.py  watcher.py
src/sourcedac/mcp/: __init__.py  server.py
src/sourcedac/utils/: __init__.py  files.py
tests/: test_placeholder.py
