[project]
name = "sourcedac"
version = "0.1.0"
description = "SourceDAC CLI and context engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SourceDAC Team" }
]
dependencies = [
    "typer[all]>=0.12.3,<1.0",
    "litellm>=1.35.0",
    "watchdog>=4.0.0",
    "fastapi>=0.111.0",
    "chromadb>=0.5.0",
    "tree-sitter>=0.20.4",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23"
]

[project.scripts]
dac = "sourcedac.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

